enhanced my profile with a fixed sidebar

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #A7C9DF;
+  background-color: #E2E2E3;
   font-family: 'Sunflower', sans-serif;
   color: #0A2472
 }
@@ -40,7 +40,7 @@ li a{
 }
 
 .card{
-  background-color: #E8F3FD;
+  background-color: #FBFBFB;
   border-radius: 4px;
   padding: 18px;
   margin: 18px;
