--- a/style.css
+++ b/style.css
@@ -96,3 +96,14 @@ li a{
 .list-inline{
   padding: 10px;
 }
+
+#sidebar {
+  position: fixed;
+  width: 300px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+#page-content {
+  margin-left: 300px;
+}
