make my profile prettier

--- a/style.css
+++ b/style.css
@@ -107,8 +107,13 @@ li a{
 }
 
 #sidebar{
-  background-color: #676768;
-  width: 100px;
+  position: fixed;
+  width: 50px;
+  background-color: gray;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  list-style-type: none;
 }
 
 #sidebar ul li a{
