--- a/style.css
+++ b/style.css
@@ -8,17 +8,14 @@ body p{
   line-height: 22px;
 }
 
-h1,
-h2{
-  font-family: 'Open Sans', sans-serif;
-}
 
-h1{
-  color: #676768;
+h1, h2{
+  font-family: 'Open Sans', sans-serif;
+   color: #676768;
 }
 
 a{
-  color: #00072D;
+  color: #676768;
 }
 
 li a{
