--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body{
   background-color: #E2E2E3;
   font-family: 'Sunflower', sans-serif;
-  color: #0A2472
+  color: rgba(0, 0, 0, 0.53);
 }
+
 
 body p{
   line-height: 22px;
@@ -11,11 +12,11 @@ body p{
 
 h1, h2{
   font-family: 'Open Sans', sans-serif;
-   color: #676768;
+   color: rgba(0, 0, 0, 0.6);
 }
 
 a{
-  color: #676768;
+  color: rgba(0, 0, 0, 0.65);
 }
 
 li a{
@@ -66,10 +67,10 @@ li a{
   }
 }
 
-.btn-red{
+.btn-gray{
   padding: 10px;
   font-size: 17px;
-  background-color: #0A2472;
+  background-color: #5C5C5C;
   color: #EEF6FD;
   text-decoration: none;
   border-radius: 4px;
