--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body{
   background-color: #E2E2E3;
   font-family: 'Sunflower', sans-serif;
-  color: rgba(0, 0, 0, 0.53);
+  color: rgba(0, 0, 0, 0.59);
 }
-
 
 body p{
   line-height: 22px;
@@ -12,17 +11,16 @@ body p{
 
 h1, h2{
   font-family: 'Open Sans', sans-serif;
-   color: rgba(0, 0, 0, 0.6);
+   color: #676768;
 }
 
 a{
-  color: rgba(0, 0, 0, 0.65);
+  color: #676768;
 }
 
 li a{
   text-decoration: none;
   font-size: 24px;
-  font-color: #3E3E3E;
 }
 
 .action li a{
